[package]
name = "solana_http_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.18"
bs58 = "0.5"
base64 = "0.22"
spl-token = "4.0"
thiserror = "1.0"
solana-program = "1.18"
ed25519-dalek = "1.0"
